# pdf-optimization-validation-and-transmogrification-service

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  deploy-sspencer-test.sh  deploy.sh  pyproject.toml  samconfig_dev.yaml  stack.yaml
.github/workflows/: release.yaml
layer/: Dockerfile
layers/programs/: Dockerfile
layers/python/: Dockerfile
layers/requirements/: Dockerfile
project/: Dockerfile
requirements/: bootstrap.in  bootstrap.txt  constraints.txt  deployment.in  deployment.txt  development.in  development.txt  production.in  production.txt  provided.in  provided.txt
scripts/: build-lambda-programs-layer.sh  build-lambda-project.sh  build-lambda-python-layer.sh  build-lambda-requirements-layer.sh  compile-requirements.sh  generate-typings.sh  sort-pyproject-toml.sh  sync-deployment-requirements.sh  sync-development-requirements.sh  sync-production-requirements.sh
src/arine_pdf_ovt/health_check/: handlers.py
src/arine_pdf_ovt/lambdas/health_check/: handlers.py
src/arine_pdf_ovt/lambdas/optimize/: handlers.py  models.py
src/arine_pdf_ovt/repositories/: aws.py  environment.py  programs.py
src/arine_pdf_ovt/s3_direct/: handlers.py  models.py
src/pdf_optimization_validation_and_transmogrification_service/handlers/: health_check.py
tests/: conftest.py
tests/fixtures/pdfs/: files.py
tests/lambdas/optimization/: test_optimization_direct_lambda_handler.py
